Kaggle dataset download via API

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,6 +19,67 @@
     "\n",
     "foo()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d067605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kaggle API requires an access token\n",
+    "# https://github.com/Kaggle/kagglehub\n",
+    "\n",
+    "# export KAGGLE_API_TOKEN=xxxxxxxxxxxxxx "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f9a5ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspace/data\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "project_root = Path.cwd()\n",
+    "data_dir = project_root / \"data\"\n",
+    "data_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "os.environ[\"KAGGLEHUB_CACHE\"] = str(data_dir)\n",
+    "\n",
+    "import kagglehub\n",
+    "\n",
+    "dataset_path = kagglehub.dataset_download(\"zlatan599/mushroom1\")\n",
+    "\n",
+    "print(os.environ.get(\"KAGGLEHUB_CACHE_DIR\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75e2ec5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de3c970",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
