--- a/project.ipynb
+++ b/project.ipynb
@@ -30,15 +30,43 @@
     "# Kaggle API requires an access token\n",
     "# https://github.com/Kaggle/kagglehub\n",
     "\n",
-    "# export KAGGLE_API_TOKEN=xxxxxxxxxxxxxx "
+    "# export KAGGLE_API_TOKEN=xxxxxxxxxxxxxx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7f9a5ae1",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading to /workspace/data/datasets/zlatan599/mushroom1/2.archive...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11.3G/11.3G [07:24<00:00, 27.3MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -49,7 +77,7 @@
    ],
    "source": [
     "from pathlib import Path\n",
-    "import os\n",
+    "import os, kagglehub\n",
     "\n",
     "project_root = Path.cwd()\n",
     "data_dir = project_root / \"data\"\n",
@@ -57,29 +85,8 @@
     "\n",
     "os.environ[\"KAGGLEHUB_CACHE\"] = str(data_dir)\n",
     "\n",
-    "import kagglehub\n",
-    "\n",
-    "dataset_path = kagglehub.dataset_download(\"zlatan599/mushroom1\")\n",
-    "\n",
-    "print(os.environ.get(\"KAGGLEHUB_CACHE_DIR\"))\n",
-    "\n"
+    "dataset_path = kagglehub.dataset_download(\"zlatan599/mushroom1\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75e2ec5c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1de3c970",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
