--- a/project.ipynb
+++ b/project.ipynb
@@ -95,6 +95,7 @@
     "    transform = transforms.Compose([\n",
     "    transforms.Resize((256, 224)),\n",
     "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
     "\n",
     "    dataset = datasets.ImageFolder(\n",
@@ -311,7 +312,14 @@
     "\n",
     "Result: 7% Accuracy\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "\n",
+    "### Cycle 2: \n",
+    "- transformations: Resize((256, 224)), Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "- 2 Epochs\n",
+    "\n",
+    "Result: 7.3% Accuracy"
    ]
   },
   {
