Updated project.ipynb: Cycle 3 with additional transformations

--- a/project.ipynb
+++ b/project.ipynb
@@ -95,7 +95,9 @@
     "    transform = transforms.Compose([\n",
     "    transforms.Resize((256, 224)),\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "    transforms.RandomRotation(20),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
     "])\n",
     "\n",
     "    dataset = datasets.ImageFolder(\n",
@@ -319,7 +321,14 @@
     "- transformations: Resize((256, 224)), Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "- 2 Epochs\n",
     "\n",
-    "Result: 7.3% Accuracy"
+    "Result: 7.3% Accuracy\n",
+    "\n",
+    "### Cycle 3: \n",
+    "- transformations: Resize((256, 224)), Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)), \n",
+    "    RandomRotation(20), RandomHorizontalFlip()\n",
+    "- 2 Epochs\n",
+    "\n",
+    "Result: 9 % Accuracy"
    ]
   },
   {
