--- a/project.ipynb
+++ b/project.ipynb
@@ -158,15 +158,15 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
-    "        self.bn1   = nn.BatchNorm2d(6) # added batch norm\n",
+    "        self.conv1 = nn.Conv2d(3, 16, 5)\n",
+    "        self.bn1   = nn.BatchNorm2d(16) # added batch norm\n",
     "\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "\n",
-    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-    "        self.bn2   = nn.BatchNorm2d(16) # added batch norm\n",
+    "        self.conv2 = nn.Conv2d(16, 32, 5)\n",
+    "        self.bn2   = nn.BatchNorm2d(32) # added batch norm\n",
     "\n",
-    "        self.fc1 = nn.Linear(51728, 120)\n",
+    "        self.fc1 = nn.Linear(103456, 120) # small model: 51728\n",
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 169)\n",
     "\n",
@@ -342,7 +342,16 @@
     "\n",
     "Result: 18 % Accuracy and more stable training process\n",
     "\n",
-    "![image-2.png](attachment:image-2.png)"
+    "![image-2.png](attachment:image-2.png)\n",
+    "\n",
+    "### Cycle 5:\n",
+    "\n",
+    "- transformations: Unchanged\n",
+    "- Model size was increased, batch size had to be reduced from 512 to 256.\n",
+    "- Conv2d(3, 6, 5) was increased to Conv2d(3, 16, 5)\n",
+    "- Conv2d(6, 16, 5) was increased to Conv2d(16, 32, 5)\n",
+    "\n",
+    "Result: 26 % Accuracy"
    ]
   },
   {
