Updated project.ipynb: Cycle 6 with residual layers

--- a/project.ipynb
+++ b/project.ipynb
@@ -154,6 +154,21 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
+    "class ResBlock(nn.Module):\n",
+    "    def __init__(self, channels):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(channels, channels, 3, padding=1, bias=False)\n",
+    "        self.bn1   = nn.BatchNorm2d(channels)\n",
+    "        self.conv2 = nn.Conv2d(channels, channels, 3, padding=1, bias=False)\n",
+    "        self.bn2   = nn.BatchNorm2d(channels)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        identity = x\n",
+    "        out = F.relu(self.bn1(self.conv1(x)))\n",
+    "        out = self.bn2(self.conv2(out))\n",
+    "        out = out + identity\n",
+    "        return F.relu(out)\n",
+    "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -166,6 +181,9 @@
     "        self.conv2 = nn.Conv2d(16, 32, 5)\n",
     "        self.bn2   = nn.BatchNorm2d(32) # added batch norm\n",
     "\n",
+    "        self.res1 = ResBlock(32)   # added resudial blocks\n",
+    "        self.res2 = ResBlock(32)   # added resudial blocks\n",
+    "\n",
     "        self.fc1 = nn.Linear(103456, 120) # small model: 51728\n",
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 169)\n",
@@ -173,6 +191,9 @@
     "    def forward(self, x):\n",
     "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
     "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
+    "\n",
+    "        x = self.res1(x)  # added resudial blocks\n",
+    "        x = self.res2(x)  # added resudial blocks\n",
     "        \n",
     "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
     "        x = F.relu(self.fc1(x))\n",
@@ -351,7 +372,14 @@
     "- Conv2d(3, 6, 5) was increased to Conv2d(3, 16, 5)\n",
     "- Conv2d(6, 16, 5) was increased to Conv2d(16, 32, 5)\n",
     "\n",
-    "Result: 26 % Accuracy"
+    "Result: 26 % Accuracy\n",
+    "\n",
+    "### Cycle 6:\n",
+    "\n",
+    "- transformations: Unchanged\n",
+    "- Added two residual blocks\n",
+    "\n",
+    "Result: 29 % Accuracy"
    ]
   },
   {
