Updated project.ipynb: Cycle 7 with increased number of epochs

--- a/project.ipynb
+++ b/project.ipynb
@@ -118,9 +118,9 @@
     "    print(len(dataset))\n",
     "    print(len(train_data), len(val_data), len(test_data))\n",
     "\n",
-    "    train_data = DataLoader(train_data, batch_size=512, shuffle=True, num_workers=16, pin_memory=True, persistent_workers=True, prefetch_factor=4)\n",
-    "    val_data = DataLoader(val_data, batch_size=512, shuffle=False)\n",
-    "    test_data = DataLoader(test_data, batch_size=512, shuffle=False)\n",
+    "    train_data = DataLoader(train_data, batch_size=256, shuffle=True, num_workers=16, pin_memory=True, persistent_workers=True, prefetch_factor=4)\n",
+    "    val_data = DataLoader(val_data, batch_size=256, shuffle=False)\n",
+    "    test_data = DataLoader(test_data, batch_size=256, shuffle=False)\n",
     "\n",
     "\n",
     "    return train_data, val_data, test_data"
@@ -315,7 +315,7 @@
     "    return acc\n",
     "\n",
     "\n",
-    "net = train_net(2)\n",
+    "net = train_net(6)\n",
     "evaluate(net, test_data, device)"
    ]
   },
@@ -379,7 +379,13 @@
     "- transformations: Unchanged\n",
     "- Added two residual blocks\n",
     "\n",
-    "Result: 29 % Accuracy"
+    "Result: 29 % Accuracy\n",
+    "\n",
+    "### Cycle 7:\n",
+    "\n",
+    "- increased Epochs from 2 to 6\n",
+    "\n",
+    "Result: 34 % Accuracy\n"
    ]
   },
   {
