Updated project.ipynb: moved functions into new file cnn.py in src folder and imported functions into project.ipynb

--- a/project.ipynb
+++ b/project.ipynb
@@ -61,14 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch, os\n",
-    "print(\"CUDA available:\", torch.cuda.is_available())\n",
-    "print(\"CUDA version (torch):\", torch.version.cuda)\n",
-    "print(\"device_count:\", torch.cuda.device_count())\n",
-    "print(\"CUDA_VISIBLE_DEVICES:\", os.environ.get(\"CUDA_VISIBLE_DEVICES\"))\n",
+    "from src.cnn import set_device\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(\"Using device:\", device)"
+    "device = set_device()"
    ]
   },
   {
@@ -76,7 +71,7 @@
    "id": "841f7553",
    "metadata": {},
    "source": [
-    "### Step 2: Define a function __get_data()__ which uses PyTorch utilities for image datasets, transforms, and data loading."
+    "### Step 2: Use function __get_transform_data__ which uses PyTorch utilities for image datasets, transforms, and data loading."
    ]
   },
   {
@@ -86,53 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision import datasets, transforms\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.utils.data import random_split\n",
+    "from src.cnn import get_transform_data\n",
     "\n",
-    "def get_transform_data():\n",
-    "\n",
-    "    transform = transforms.Compose([\n",
-    "    transforms.Resize((256, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.RandomRotation(20),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
-    "])\n",
-    "\n",
-    "    dataset = datasets.ImageFolder(\n",
-    "        root=\"archive/merged_dataset\",\n",
-    "        transform=transform\n",
-    "    )\n",
-    "\n",
-    "    N = len(dataset)\n",
-    "\n",
-    "    train_size = int(0.8 * N)\n",
-    "    val_size   = int(0.1 * N)\n",
-    "    test_size  = N - train_size - val_size  # Rest for test\n",
-    "\n",
-    "    train_data, val_data, test_data = random_split(\n",
-    "        dataset, [train_size, val_size, test_size]\n",
-    "    )\n",
-    "\n",
-    "    print(len(dataset))\n",
-    "    print(len(train_data), len(val_data), len(test_data))\n",
-    "\n",
-    "    train_data = DataLoader(train_data, batch_size=256, shuffle=True, num_workers=16, pin_memory=True, persistent_workers=True, prefetch_factor=4)\n",
-    "    val_data = DataLoader(val_data, batch_size=256, shuffle=False)\n",
-    "    test_data = DataLoader(test_data, batch_size=256, shuffle=False)\n",
-    "\n",
-    "\n",
-    "    return train_data, val_data, test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d192c1d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_data, val_data, test_data = get_transform_data()"
    ]
   },
@@ -151,56 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "class ResBlock(nn.Module):\n",
-    "    def __init__(self, channels):\n",
-    "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(channels, channels, 3, padding=1, bias=False)\n",
-    "        self.bn1   = nn.BatchNorm2d(channels)\n",
-    "        self.conv2 = nn.Conv2d(channels, channels, 3, padding=1, bias=False)\n",
-    "        self.bn2   = nn.BatchNorm2d(channels)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        identity = x\n",
-    "        out = F.relu(self.bn1(self.conv1(x)))\n",
-    "        out = self.bn2(self.conv2(out))\n",
-    "        out = out + identity\n",
-    "        return F.relu(out)\n",
-    "\n",
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.conv1 = nn.Conv2d(3, 16, 5)\n",
-    "        self.bn1   = nn.BatchNorm2d(16) # added batch norm\n",
-    "\n",
-    "        self.pool = nn.MaxPool2d(2, 2)\n",
-    "\n",
-    "        self.conv2 = nn.Conv2d(16, 32, 5)\n",
-    "        self.bn2   = nn.BatchNorm2d(32) # added batch norm\n",
-    "\n",
-    "        self.res1 = ResBlock(32)   # added resudial blocks\n",
-    "        self.res2 = ResBlock(32)   # added resudial blocks\n",
-    "\n",
-    "        self.fc1 = nn.Linear(103456, 120) # small model: 51728\n",
-    "        self.fc2 = nn.Linear(120, 84)\n",
-    "        self.fc3 = nn.Linear(84, 169)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
-    "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
-    "\n",
-    "        x = self.res1(x)  # added resudial blocks\n",
-    "        x = self.res2(x)  # added resudial blocks\n",
-    "        \n",
-    "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = F.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
-    "        return x\n",
-    "\n",
+    "from src.cnn import Net, ResBlock\n",
     "\n",
     "net = Net()\n",
     "net = net.to(device)"
@@ -232,7 +133,7 @@
    "id": "0f2147c2",
    "metadata": {},
    "source": [
-    "### Step 4: Define a function for training the model"
+    "### Step 4: Use function for training the model"
    ]
   },
   {
@@ -242,40 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "from src.cnn import train_net\n",
     "\n",
-    "def train_net(n_epoch):\n",
-    "    losses = []\n",
-    "    for epoch in range(n_epoch):  # loop over the dataset multiple times\n",
-    "        running_loss = 0.0\n",
-    "        for i, data in enumerate(train_data, 0):\n",
-    "            # get the inputs; data is a list of [inputs, labels]\n",
-    "            inputs, labels = data\n",
-    "\n",
-    "            inputs = inputs.to(device, non_blocking=True)\n",
-    "            labels = labels.to(device, non_blocking=True)\n",
-    "\n",
-    "            # zero the parameter gradients\n",
-    "            optimizer.zero_grad()\n",
-    "\n",
-    "            # forward + backward + optimize\n",
-    "            outputs = net(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
-    "            losses.append(loss.item())\n",
-    "            running_loss += loss.item()\n",
-    "            if i % 100 == 99:  # print every 2000 mini-batches\n",
-    "                print('[%d, %5d] loss: %.10f' %\n",
-    "                      (epoch + 1, i + 1, running_loss / 2000))\n",
-    "                running_loss = 0.0\n",
-    "    plt.plot(losses, label='Training loss')\n",
-    "    plt.xlabel(\"training steps\")\n",
-    "    plt.ylabel(\"loss value\")\n",
-    "    plt.show()\n",
-    "    print('Finished Training')\n",
-    "    return net"
+    "net = train_net(6, criterion, optimizer, device, net, train_data)"
    ]
   },
   {
@@ -283,7 +153,7 @@
    "id": "d3af106e",
    "metadata": {},
    "source": [
-    "### Step 5: Define a function for evaluating the trained model"
+    "### Step 5: Use function for evaluating the trained model"
    ]
   },
   {
@@ -293,29 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(net, test_loader, device):\n",
-    "    net.eval()\n",
+    "from src.cnn import evaluate\n",
     "\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for images, labels in test_loader:\n",
-    "            images = images.to(device, non_blocking=True)\n",
-    "            labels = labels.to(device, non_blocking=True)\n",
-    "\n",
-    "            outputs = net(images)\n",
-    "            _, predicted = torch.max(outputs, 1)\n",
-    "\n",
-    "            total += labels.size(0)\n",
-    "            correct += (predicted == labels).sum().item()\n",
-    "\n",
-    "    acc = 100.0 * correct / total\n",
-    "    print(f\"Accuracy on {total} test images: {acc:.2f}%\")\n",
-    "    return acc\n",
-    "\n",
-    "\n",
-    "net = train_net(6)\n",
     "evaluate(net, test_data, device)"
    ]
   },
